--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -1302,6 +1302,7 @@ function getCategories() {
 				$(menuItem).addClass("selectedMenu");
 				$(menuItem).parent().show();
 				$(menuItem).next().show();
+				restoreStateMenu = false;
 			}
 		}
 	});
