Fixed: searching from within a subcategory would leave subcategory still open

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -525,6 +525,7 @@ function doSearch(button,newSearch) {
 		updateDisplay(result.display);
 		data.section = "AppStore";
 		$(".selectedMenu").removeClass("selectedMenu");
+		$(".subCategory").hide();
 	});
 }
 
