--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -670,8 +670,15 @@ function dockerConvert(dockerID) {
 	post({action:'convert_docker',ID:dockerID},function(result) {
 		myCloseAlert();
 		templateURL = "/Apps/AddContainer?xmlTemplate=default:" + $.trim(result.xml);
-		window.open(templateURL,"_self");
+		openWindow(templateURL);
 	});
+}
+
+function openWindow(newURL) {
+	var popUp = window.open(newURL,"_self");
+	if ( !popUp || popUp.closed || typeof popUp == "undefined" ) {
+		alert("CA requires popups to be enabled under certain circumstances.  You must white list your server within your browser to allow popups");
+	}
 }
 
 function clearSearchBox() {
