--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/PluginAPI.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/PluginAPI.page
@@ -66,28 +66,35 @@ function caPluginUpdateCheck(plugin,options=[],callback) {
 		var result = JSON.parse(caAPIresult);
 
 		if ( options.debug == true ) result.updateAvailable = true;
-		if ( $.cookie(plugin) != result.version ) {
+		var name = options.name ? options.name : "this plugin ("+plugin+")";
+		if ( ! options.element ) {
 			if ( result.updateAvailable ) {
-				var name = options.name ? options.name : "this plugin ("+plugin+")";
 				var HTML = "An upgrade to "+name+" is available.  Click <a class='ca_PluginUpdateInstall' onclick='ca_pluginUpdateInstall(&quot;"+plugin+"&quot;);'>here</a> to install version "+result.version+" <i class='ca_pluginUpdateInfo fa fa-info-circle' onclick=ca_pluginUpdateShowInfo('/plugins/dynamix.plugin.manager/include/ShowChanges.php?file=%2Ftmp%2Fplugins%2F"+pluginFilename+".txt','Release&nbsp;Notes',600,900); return false;'></i>";
-				if ( ! ca_pluginUpdate_evaluateBoolean(options.noDismiss) ) {
-					HTML = HTML.concat("<span class='ca_PluginUpdateDismiss'><i class='fa fa-close' onclick='ca_hidePluginUpdate(&quot;"+result.version+"&quot;);'></i>");
-				}
-				result.HTML = HTML;
-				ca_PluginUpdateElement = options.element ? options.element : ".ca_plugin_notice";
-
-				if ( ! ca_pluginUpdate_evaluateBoolean(options.dontShow) ) {
-					if ( ! options.element ) {
-						$(".ca_element_notice").html(HTML);
-						if (options.priority) {
-							var z_index = $(".upgrade_notice").css("z-index");
-							$(".ca_element_notice").css("z-index",z_index+1);
-						}
-					} else {
-						$(ca_PluginUpdateElement).html(HTML);
+				addBannerWarning(HTML,false,ca_pluginUpdate_evaluateBoolean(options.noDismiss));
+			}
+		} else {
+			if ( $.cookie(plugin) != result.version ) {
+				if ( result.updateAvailable ) {
+					var HTML = "An upgrade to "+name+" is available.  Click <a class='ca_PluginUpdateInstall' onclick='ca_pluginUpdateInstall(&quot;"+plugin+"&quot;);'>here</a> to install version "+result.version+" <i class='ca_pluginUpdateInfo fa fa-info-circle' onclick=ca_pluginUpdateShowInfo('/plugins/dynamix.plugin.manager/include/ShowChanges.php?file=%2Ftmp%2Fplugins%2F"+pluginFilename+".txt','Release&nbsp;Notes',600,900); return false;'></i>";
+					if ( ! ca_pluginUpdate_evaluateBoolean(options.noDismiss) ) {
+						HTML = HTML.concat("<span class='ca_PluginUpdateDismiss'><i class='fa fa-close' onclick='ca_hidePluginUpdate(&quot;"+result.version+"&quot;);'></i>");
 					}
-					$(ca_PluginUpdateElement).addClass("ca_element_notice").show();
+					result.HTML = HTML;
+					ca_PluginUpdateElement = options.element ? options.element : ".ca_plugin_notice";
 
+					if ( ! ca_pluginUpdate_evaluateBoolean(options.dontShow) ) {
+						if ( ! options.element ) {
+							$(".ca_element_notice").html(HTML);
+							if (options.priority) {
+								var z_index = $(".upgrade_notice").css("z-index");
+								$(".ca_element_notice").css("z-index",z_index+1);
+							}
+						} else {
+							$(ca_PluginUpdateElement).html(HTML);
+						}
+						$(ca_PluginUpdateElement).addClass("ca_element_notice").show();
+
+					}
 				}
 			}
 		}
@@ -98,5 +105,64 @@ function caPluginUpdateCheck(plugin,options=[],callback) {
 			callback(JSON.stringify(result));
 		}
 	});
+}
+function addBannerWarning(text,warning=true,noDismiss=false) {
+	var cookieText = text.replace(/[^a-z0-9]/gi,'');
+	if ( $.cookie(cookieText) == "true" ) { return false; }
+	
+	var z_index = $(".upgrade_notice").css("z-index"); 
+	$(".ca_element_notice").css("z-index",z_index+1); // Warnings take precendence over unRaid's OS warnings
+	if ( warning ) {
+		text = "<i class='fa fa-warning'></i> "+text;
+	}
+	var arrayEntry = ca_WarningItems.push("placeholder") - 1;
+	if ( ! noDismiss ) {
+		text = text + "<span class='ca_PluginUpdateDismiss'><i class='fa fa-close' onclick='dismissBannerWarning("+arrayEntry+",&quot;"+cookieText+"&quot;)'></i>";
+	}
+	ca_WarningItems[arrayEntry] = text;
+	if ( ! warningInterval ) {
+		showWarnings();
+		warningInterval = setInterval(function() {
+			showWarnings()
+		},10000);
+	}
+	return arrayEntry;
+}
+
+function dismissBannerWarning(entry,cookieText) {
+	$.cookie(cookieText,"true");
+	removeBannerWarning(entry);
+}
+
+function removeBannerWarning(entry) {
+	ca_WarningItems[entry] = false;
+	showWarnings();
+}
+
+function filterArray(array) {
+	var newArray = [];
+	array.filter(function(value,index,arr) {
+		if ( value ) {
+			newArray.push(value);
+		}
+	});	
+	return newArray;
+}
+
+function showWarnings() {
+	var allWarnings = filterArray(Object.values(ca_WarningItems));
+	if ( allWarnings.length == 0 ) {
+		$(".ca_plugin_notice,.ca_element_notice").hide();
+		clearInterval(warningInterval);
+		warningInterval = false;
+		return;
+	}
+	if ( currentWarning >= allWarnings.length ) {
+		currentWarning = 0;
+	}
+	$(".upgrade_notice").hide();
+	$(".ca_plugin_notice,.ca_element_notice").show();
+	$(".ca_plugin_notice").html(allWarnings[currentWarning]);
+  currentWarning++;
 }
 </script>
