--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/PluginAPI.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/PluginAPI.page
@@ -16,11 +16,14 @@ Link='nav-user'
 .ca_PluginUpdateDismiss{float:right;margin-right:20px;cursor:pointer;}
 .ca_pluginUpdateInfo{cursor:pointer;}
 .ca_PluginUpdateInstall{cursor:pointer;}
+a.bannerInfo {cursor:pointer;text-decoration:none;}
+.bannerInfo::before {content:"\f05a";font-family:fontAwesome;color:#e68a00;}
 </style>
 <script>
 var ca_PluginUpdatePLG;
 var ca_PluginUpdateElement;
 var ca_WarningItems = [];
+var currentWarning = 0;
 
 $(function() {
 	$(".upgrade_notice").after("<div class='ca_plugin_notice ca_element_notice'></div>");
@@ -71,7 +74,7 @@ if ( typeof caPluginUpdateCheck !== "function" ) {
 			var name = options.name ? options.name : "this plugin ("+plugin+")";
 			if ( ! options.element ) {
 				if ( result.updateAvailable ) {
-					var HTML = "An upgrade to "+name+" is available.  Click <a class='ca_PluginUpdateInstall' onclick='ca_pluginUpdateInstall(&quot;"+plugin+"&quot;);'>here</a> to install version "+result.version+" <i class='ca_pluginUpdateInfo fa fa-info-circle' onclick=ca_pluginUpdateShowInfo('/plugins/dynamix.plugin.manager/include/ShowChanges.php?file=%2Ftmp%2Fplugins%2F"+pluginFilename+".txt','Release&nbsp;Notes',600,900); return false;'></i>";
+					var HTML = "An upgrade to "+name+" is available.  Click <a class='ca_PluginUpdateInstall' onclick='ca_pluginUpdateInstall(&quot;"+plugin+"&quot;);'>here</a> to install version "+result.version+" <a class='bannerInfo fa fa-info-circle' onclick=ca_pluginUpdateShowInfo('/plugins/dynamix.plugin.manager/include/ShowChanges.php?file=%2Ftmp%2Fplugins%2F"+pluginFilename+".txt','Release&nbsp;Notes',600,900); return false;'></a>";
 					addBannerWarning(HTML,false,ca_pluginUpdate_evaluateBoolean(options.noDismiss));
 				}
 			} else {
