--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -77,11 +77,11 @@ $(function(){
 	searchBoxInput = document.getElementById("searchBox");
 	searchBoxAwesomplete = new Awesomplete(searchBoxInput);
 
-	if ( "<?=$date?>" == "5/29" ) addBannerWarning("Happy Birthday CA! <i class='fa fa-birthday-cake'></i>",false);
+	if ( "<?=$date?>" == "5/29" ) addBannerWarning("Happy Birthday CA! <i style='float:initial;cursor:initial;' class='fa fa-birthday-cake'></i>",false);
 	if ( "<?=$date?>" == "12/24" ) addBannerWarning("Happy Holidays from Andrew, Tracey, and family",false);
 	if ( "<?=$date?>" == "12/25" ) addBannerWarning("Happy Holidays from Andrew, Tracey, and family",false);
 	if ( "<?=$date?>" == "1/01" ) addBannerWarning("Happy New Years!",false);
-	if ( "<?=$date?>" == "12/31" ) addBannerWarning("Happy New Years Eve <i class='fa fa-beer'></i> Please Enjoy Responsibly",false);
+	if ( "<?=$date?>" == "12/31" ) addBannerWarning("Happy New Years Eve <i style='float:initial;cursor:initial;' class='fa fa-beer'></i> Please Enjoy Responsibly",false);
 
 	if ( isTouch ) {
 		templates_content.addEventListener("touchstart", startTouch, false);
